--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -293,3 +293,18 @@ ul.list li.description p.desc{
 button:hover {
   border: 0.1rem #404040 ssolid;
 }
+
+/*loading page and error page css*/
+.alert {
+  padding: 1rem;
+  border: 0.1rem solid transparent;
+  border-radius: 0.5rem;
+}
+.alert-info {
+  color: #2020A0;
+  background-color: #E0E0FF;
+}
+.alert-danger {
+  color: #A02020;
+  background-color: #FFE0E0;
+}
