designing payment method page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -377,7 +377,7 @@ img.large{
 }
 .signin label {
   margin: 1rem 0;
-  display: block;
+  /* display: block; */
 }
 .signin button{
   background-color: #222;
